# training-data

./: README.md  Solidity.g4  Solidity.tokens  SolidityParser.py  SolidityVisitor.py  ast_parser.py  logging_config.py  main.py  pyproject.toml  reentrancy_detector.py  utils.py
dataset/contract1/: 0.sol  1.sol  100.sol  101.sol  102.sol  103.sol  104.sol  105.sol  106.sol  11.sol  110.sol  112.sol  113.sol  114.sol  115.sol  116.sol  117.sol  118.sol  119.sol  12.sol  120.sol  121.sol  122.sol  123.sol  124.sol  125.sol  126.sol  127.sol  128.sol  129.sol  130.sol  131.sol  132.sol  133.sol  134.sol  137.sol  139.sol  142.sol  143.sol  144.sol  (+797 more)
dataset/contract10/: 9000.sol  9001.sol  9002.sol  9003.sol  9004.sol  9006.sol  9007.sol  9008.sol  9009.sol  9010.sol  9011.sol  9012.sol  9016.sol  9018.sol  9019.sol  9020.sol  9021.sol  9022.sol  9023.sol  9024.sol  9025.sol  9026.sol  9027.sol  9028.sol  9029.sol  9030.sol  9031.sol  9032.sol  9033.sol  9034.sol  9035.sol  9036.sol  9037.sol  9038.sol  9039.sol  9040.sol  9041.sol  9042.sol  9043.sol  9044.sol  (+818 more)
dataset/contract11/: 10001.sol  10002.sol  10003.sol  10004.sol  10005.sol  10006.sol  10007.sol  10008.sol  10009.sol  10010.sol  10011.sol  10012.sol  10013.sol  10014.sol  10015.sol  10017.sol  10018.sol  10020.sol  10028.sol  10030.sol  10031.sol  10032.sol  10033.sol  10034.sol  10035.sol  10036.sol  10037.sol  10038.sol  10039.sol  10040.sol  10041.sol  10042.sol  (+849 more)
solidity_parser/: Solidity.g4  Solidity.interp  SolidityLexer.interp  SolidityLexer.py  SolidityListener.py  SolidityParser.py  SolidityVisitor.py
(+73216 files in other folders)
